fix: width and height on mobile

--- a/css/components/main-dialog.css
+++ b/css/components/main-dialog.css
@@ -10,6 +10,7 @@
   border-radius: 16px;
   margin: 3em;
   margin-bottom: 0;
+  overflow: hidden;
   &:hover {
     border: 2px solid var(--color-primary);
   }
@@ -92,8 +93,12 @@
 }
 
 @media (max-width: 480px) {
-
+  .main-dialog {
+    margin: 1em;
+  }
   .main-dialog__options {
     flex-direction: column;
+    margin: 1em;
+    margin-bottom: 0;
   }
 }
