--- a/css/layout.css
+++ b/css/layout.css
@@ -21,6 +21,8 @@ footer {
 .main-wrapper {
   flex-grow: 1;
   align-content: center;
+  width: 100%;
+  max-width: 100%;
 }
 
 @media (max-width: 480px) {
