--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+/* debugging */
+/* * {
+  outline: 1px dashed red;
+} */
+
 :root {
   color-scheme: light dark;
   --color-primary: light-dark(#8839ef, #cba6f7);
@@ -27,6 +32,10 @@ html {
   font-family: Saira Condensed, serif;
   font-size: 16px;
   font-weight: 500;
+  overflow-x: hidden;
+}
+body {
+  overflow-x: hidden;
 }
 
 .small {
